working on gameslist page

--- a/client/src/components/common/button/index.module.scss
+++ b/client/src/components/common/button/index.module.scss
@@ -1,7 +1,7 @@
 @import '../../../theme/variables.scss';
 
 .button {
-    background-color: $bitcoin;
+    background-color: $yellow;
     padding: 24px;
     border: none;
     box-shadow: 0px -2px 18px rgba(128, 128, 128, 0.1);
