--- a/client/src/theme/variables.scss
+++ b/client/src/theme/variables.scss
@@ -9,10 +9,11 @@ $text-hover-background: #fdbc11;
 $black: #000000;
 $black-semi: #808080;
 $bleachedSilk: #f2f2f2;
-$bitcoin: #fdbc11;
+$yellow: #fdbc11;
+$background-gray:#FDFDFD;
 
 // fonts
-$font-work-sans: 'Work Sans', sans-serif;
+$font-Prompt: 'Prompt', sans-serif;
 
 // breakpoints
 $screen-sm-max: 428px;
