--- a/client/src/components/common/input/index.module.scss
+++ b/client/src/components/common/input/index.module.scss
@@ -1,14 +1,29 @@
 @import '../../../theme/variables.scss';
+@import '../../../theme/mixins.scss';
 
 .container {
     border: 1px solid $bleachedSilk;
     border-radius: 4px;
     padding: 10px;
     margin-bottom: 20px;
-
+    max-height: 64px;
+    p {
+        font-family: $font-Prompt;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        color: $black-semi;
+        transition:all 1s;
+    }
+    .inputContainer{
+        @include flex(center, center);
+    }
     input {
+        @include font-style;
         border: none;
-
+        color:$text-black;
+        font-size: 16px;
+        width: 100%;
         &:focus {
             outline: none;
         }
