--- a/client/src/components/header/index.module.scss
+++ b/client/src/components/header/index.module.scss
@@ -1,7 +1,7 @@
 @import '../../theme/variables.scss';
 @import '../../theme/mixins';
 
-.header {
+.container {
     padding: 0 82px;
     display: flex;
     flex-direction: row;
@@ -32,7 +32,13 @@
                 margin-left: 8px;
                 text-decoration: none;
             }
+            @include md{
+                margin-left: 24px;
+            }
         }
       
+    }
+    @include md{
+        padding: 0 24px;
     }
 }
