--- a/client/src/pages/gamesList/index.module.scss
+++ b/client/src/pages/gamesList/index.module.scss
@@ -1,6 +1,7 @@
 @import '../../theme/variables.scss';
 
 
-.mainContainer{
+.container{
     background-color: $background-gray;
+    width: 100%;
 }
