--- a/client/src/components/common/button/index.module.scss
+++ b/client/src/components/common/button/index.module.scss
@@ -1,6 +1,8 @@
 @import '../../../theme/variables.scss';
+@import '../../../theme/mixins.scss';
 
 .button {
+    @include font-style;
     background-color: $yellow;
     padding: 24px;
     border: none;
