--- a/client/src/components/common/input/index.module.scss
+++ b/client/src/components/common/input/index.module.scss
@@ -8,9 +8,7 @@
     margin-bottom: 20px;
     max-height: 64px;
     p {
-        font-family: $font-Prompt;
-        font-style: normal;
-        font-weight: 400;
+        @include font-style;
         font-size: 12px;
         color: $black-semi;
         transition:all 1s;
@@ -22,7 +20,6 @@
         @include font-style;
         border: none;
         color:$text-black;
-        font-size: 16px;
         width: 100%;
         &:focus {
             outline: none;
