--- a/client/src/theme/variables.scss
+++ b/client/src/theme/variables.scss
@@ -11,6 +11,7 @@ $black-semi: #808080;
 $bleachedSilk: #f2f2f2;
 $yellow: #fdbc11;
 $background-gray:#FDFDFD;
+$text-blue:#3F53BE;
 
 // fonts
 $font-Prompt: 'Prompt', sans-serif;
