filter logics configured

--- a/client/src/components/common/button/index.module.scss
+++ b/client/src/components/common/button/index.module.scss
@@ -4,10 +4,11 @@
 .button {
     @include font-style;
     background-color: $yellow;
-    padding: 24px;
     border: none;
     box-shadow: 0px -2px 18px rgba(128, 128, 128, 0.1);
     border-radius: 4px;
     width: 100%;
     cursor: pointer;
+    height: 64px;
+    min-height: 64px;
 }
