--- a/client/src/components/common/input/index.module.scss
+++ b/client/src/components/common/input/index.module.scss
@@ -4,23 +4,32 @@
 .container {
     border: 1px solid $bleachedSilk;
     border-radius: 4px;
-    padding: 10px;
+    padding:0 10px;
     margin-bottom: 20px;
+    height: 64px;
     max-height: 64px;
+    min-height: 64px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     p {
         @include font-style;
         font-size: 12px;
         color: $black-semi;
         transition:all 1s;
+        padding:0 10px;
+        margin-left: -10px;
     }
     .inputContainer{
         @include flex(center, center);
+        width: 100%;
     }
     input {
         @include font-style;
         border: none;
         color:$text-black;
         width: 100%;
+        height: 32px;
         &:focus {
             outline: none;
         }
