--- a/client/src/components/gamesContainer/imageList/index.module.scss
+++ b/client/src/components/gamesContainer/imageList/index.module.scss
@@ -3,18 +3,13 @@
 
 .container {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     flex-direction: row;
     flex-wrap: wrap;
     padding: 0;
     width: 100%;
-    // gap:20px;
     .image {
         width: 196px;
-        height: 141px;
-        flex: 0 0 25%;
-        // flex: 0 0 33.3333%;
-        // flex: 0 0 50%;
         margin-bottom: 20px;
         img {
             border-radius: 8px;
@@ -23,9 +18,21 @@
             object-fit: cover;
         }
         @include md {
-            flex: 0 0 33.33%;
+            flex: 0 0 50%;
         }
-        @include sm {
+    }
+    .column-2 {
+        flex: 0 0 50%;
+    }
+    .column-3 {
+        flex: 0 0 33.33%;
+        @include md {
+            flex: 0 0 50%;
+        }
+    }
+    .column-4 {
+        flex: 0 0 25%;
+        @include md {
             flex: 0 0 50%;
         }
     }
