--- a/client/src/components/gamesContainer/imageList/index.module.scss
+++ b/client/src/components/gamesContainer/imageList/index.module.scss
@@ -8,6 +8,7 @@
     flex-wrap: wrap;
     padding: 0;
     width: 100%;
+    height: fit-content;
     .image {
         width: 196px;
         margin-bottom: 20px;
